[package]
name = "chip8uwu"
version = "0.1.0"
authors = ["Seth"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["wgpu"] }
egui = "0.28"
egui_extras = "0.28"
egui-wgpu = "0.28"
egui-winit = { version = "0.28", default-features = false }
native-dialog = "0.7"
log = "0.4"
rand = "0.8"
pollster = "0.3"