[package]
name = "chip8uwu"
version = "0.1.0"
authors = ["Seth"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.31.1", default-features = false, features = ["wgpu"] }
egui = "0.31.1"
egui_extras = "0.31.1"
native-dialog = "0.9.0"
rand = "0.9.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }